Updated gradle wrapper version to rc3

--- a/build.gradle
+++ b/build.gradle
@@ -55,5 +55,5 @@ task checkstyleReport << {
 //}
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.0-milestone-8'
+    gradleVersion = '1.0-rc-3'
 }
