Made the coverage reach 100% (to easily spot when real code is uncovered)

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ checkstyleMain {
     }
 }
 
+checkstyleTest {
+    ignoreFailures = true
+}
+
 task checkstyleReport << {
     if (file("$buildDir/reports/checkstyle/${checkType}.xml").exists()) {
 
