--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'java'
 apply plugin: 'checkstyle'
+apply plugin: 'maven'
+apply plugin: 'signing'
 
 sourceCompatibility = 1.6
 
-version = '0.8.0'
+group = 'se.fearless'
+version = '0.8.1'
 
 defaultTasks 'build'
 
@@ -21,10 +24,10 @@ dependencies {
 task gwtJar(type: Jar, dependsOn: classes) {
     classifier = 'gwt'
     from sourceSets.main.getOutput().classesDir
-    into('se/fearless/fettle/super') {
+    into('se/hiflyer/fettle/super') {
         from sourceSets.main.allJava
     }
-    into('se/fearless/fettle') {
+    into('se/hiflyer/fettle') {
         from sourceSets.main.resources
     }
 }
@@ -52,8 +55,84 @@ task checkstyleReport << {
     }
 }
 
+// custom tasks for creating source jar
+task sourcesJar(type: Jar, dependsOn:classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+// custom tasks for creating javadoc jar
+task javadocJar(type: Jar, dependsOn:javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives jar
+    archives sourcesJar
+    archives javadocJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
+            }
+
+            pom.project {
+                name 'Fettle'
+                packaging 'jar'
+                description 'Fettle is a state machine framework for java'
+                url 'http://http://thehiflyer.github.com/Fettle/'
+
+                scm {
+                    url 'scm:git@github.com:thehiflyer/Fettle.git'
+                    connection 'scm:git@github.com:thehiflyer/Fettle.git'
+                    developerConnection 'scm:git@github.com:thehiflyer/Fettle.git'
+                }
+
+                licenses {
+                    license {
+                        name 'MIT License'
+                        url 'http://www.opensource.org/licenses/mit-license.php'
+                        distribution 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'thehiflyer'
+                        name 'Per Malmén'
+                    }
+                }
+            }
+
+            //mess with the generated pom to set the 'packaging' tag
+            pom.withXml { XmlProvider xmlProvider ->
+                def xml = xmlProvider.asString()
+                def pomXml = new XmlParser().parse(new ByteArrayInputStream(xml.toString().bytes))
+
+                pomXml.version[0] + { packaging('jar') }
+
+                def newXml = new StringWriter()
+                def printer = new XmlNodePrinter(new PrintWriter(newXml))
+                printer.preserveWhitespace = true
+                printer.print(pomXml)
+                xml.setLength(0)
+                xml.append(newXml.toString())
+            }
+        }
+    }
+}
+
 //buildscript {
-    // using a variable to make wiki look cleaner
+// using a variable to make wiki look cleaner
 //    def githubBase = 'https://raw.github.com/valkolovos/gradle_cobertura/master/ivy'
 //    apply from: "${githubBase}/gradle_cobertura/gradle_cobertura/1.0-rc4/coberturainit.gradle"
 //}
