--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'signing'
 sourceCompatibility = 1.6
 
 group = 'se.fearless'
+archivesBaseName = "fettle"
 version = '0.8.2'
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
@@ -89,60 +90,48 @@ signing {
 }
 
 uploadArchives {
-    if(hasProperty('sonatypeUsername') && hasProperty('sonatypePassword')) {
-        repositories {
-            mavenDeployer {
-                beforeDeployment { MavenDeployment deployment -> signPom(deployment) }
+	repositories {
+		mavenDeployer {
+			beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                    authentication(userName: sonatypeUsername, password: sonatypePassword)
-                }
+			repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+				authentication(userName: sonatypeUsername, password: sonatypePassword)
+			}
 
-                pom.project {
-                    name 'Fettle'
-                    packaging 'jar'
-                    description 'Fettle is a state machine framework for java'
-                    url 'http://http://thehiflyer.github.com/Fettle/'
+			snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+				authentication(userName: sonatypeUsername, password: sonatypePassword)
+			}
 
-                    scm {
-                        url 'scm:git@github.com:thehiflyer/Fettle.git'
-                        connection 'scm:git@github.com:thehiflyer/Fettle.git'
-                        developerConnection 'scm:git@github.com:thehiflyer/Fettle.git'
-                    }
+			pom.project {
+				name 'Fettle'
+				packaging 'jar'
+				description 'Fettle is a state machine framework for java'
+				url 'http://http://thehiflyer.github.com/Fettle/'
 
-                    licenses {
-                        license {
-                            name 'MIT License'
-                            url 'http://www.opensource.org/licenses/mit-license.php'
-                            distribution 'repo'
-                        }
-                    }
+				scm {
+					url 'https://github.com/thehiflyer/Fettle.git'
+					connection 'https://github.com/thehiflyer/Fettle.git'
+					developerConnection 'https://github.com/thehiflyer/Fettle.git'
+				}
 
-                    developers {
-                        developer {
-                            id 'thehiflyer'
-                            name 'Per Malmén'
-                        }
-                    }
-                }
+				licenses {
+					license {
+						name 'MIT License'
+						url 'http://www.opensource.org/licenses/mit-license.php'
+						distribution 'repo'
+					}
+				}
 
-                //mess with the generated pom to set the 'packaging' tag
-                pom.withXml { XmlProvider xmlProvider ->
-                    def xml = xmlProvider.asString()
-                    def pomXml = new XmlParser().parse(new ByteArrayInputStream(xml.toString().bytes))
+				developers {
+					developer {
+						id 'hiflyer'
+						name 'Per Malmén'
+					}
+				}
+			}
+		}
+	}
 
-                    pomXml.version[0] + { packaging('jar') }
-
-                    def newXml = new StringWriter()
-                    def printer = new XmlNodePrinter(new PrintWriter(newXml))
-                    printer.preserveWhitespace = true
-                    printer.print(pomXml)
-                    xml.setLength(0)
-                    xml.append(newXml.toString())
-                }
-            }
-        }
-    }
 }
 
 task wrapper(type: Wrapper) {
