--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,13 @@ buildscript {
 		mavenCentral()
 		//Needed only for SNAPSHOT versions
 		//maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
 	}
 	dependencies {
 		classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.1.10'
+		classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.11"
 	}
 }
 
@@ -14,6 +18,7 @@ apply plugin: 'jacoco'
 apply plugin: 'checkstyle'
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'net.ltgt.errorprone'
 
 
 
